--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "server",
 	"version": "1.0.0",
-	"description": "",
+	"description": "Backend for RPSLS game",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
@@ -16,14 +16,16 @@
 		"esbuild": "^0.17.18",
 		"esbuild-node-tsc": "^2.0.5",
 		"express": "^4.18.2",
-		"http": "^0.0.1-security",
-		"nodemon": "^2.0.22",
-		"path": "^0.12.7",
-		"socket.io": "^4.6.1"
+		"socket.io": "^4.6.1",
+		"path": "^0.12.7"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.1.2",
-		"typescript": "^5.0.4"
+		"typescript": "^5.0.4",
+		"nodemon": "^2.0.22"
+	},
+	"engines": {
+		"node": ">=18.x"
 	}
 }
