--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
 		"esbuild": "^0.17.18",
 		"esbuild-node-tsc": "^2.0.5",
 		"express": "^4.18.2",
-		"socket.io": "^4.6.1",
-		"path": "^0.12.7"
+		"helmet": "^8.0.0",
+		"path": "^0.12.7",
+		"socket.io": "^4.6.1"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.1.2",
-		"typescript": "^5.0.4",
-		"nodemon": "^2.0.22"
+		"nodemon": "^2.0.22",
+		"typescript": "^5.0.4"
 	},
 	"engines": {
 		"node": ">=18.x"
